2014-10-21  Michael Catanzaro  <mcatanzaro@igalia.com>

        [SOUP] Disable SSLv3
        https://bugs.webkit.org/show_bug.cgi?id=137859

        Reviewed by Carlos Garcia Campos.

        Set G_TLS_GNUTLS_PRIORITY if unset.

        * NetworkProcess/EntryPoint/unix/NetworkProcessMain.cpp:
        (main):
        * WebProcess/EntryPoint/unix/WebProcessMain.cpp:
        (main):

2014-09-26  Alberto Garcia  <berto@igalia.com>

        [GTK] Don't include full path names in WebKitEnumTypes.h
        https://bugs.webkit.org/show_bug.cgi?id=137148

        Reviewed by Carlos Garcia Campos.

        Replace @filename@ with @basename@ in the template, since we don't
        want to include the full path name in the generated header.

        * UIProcess/API/gtk/WebKitEnumTypes.h.template:

2014-10-09  Carlos Garcia Campos  <cgarcia@igalia.com>

        [X11] Plugin process crashes in NetscapePlugin::platformPostInitialize()
        https://bugs.webkit.org/show_bug.cgi?id=137426

        Reviewed by Darin Adler.

        For some reason flash crashes when NPP_GetValue is called with
        NPPVpluginCancelSrcStream, but only in windowed mode. Not calling
        NPP_GetValue and unconditionally loading the source URL in the
        browser fixes the crash and plugins work normally. We can handle
        this particular case with a new quirk.

        * Shared/Plugins/Netscape/x11/NetscapePluginModuleX11.cpp:
        (WebKit::NetscapePluginModule::determineQuirks): Add
        DoNotCancelSrcStreamInWindowedMode quirk if it's flash plugin.
        * Shared/Plugins/PluginQuirks.h: Add
        DoNotCancelSrcStreamInWindowedMode quirk.
        * WebProcess/Plugins/Netscape/NetscapePlugin.cpp:
        (WebKit::NetscapePlugin::shouldLoadSrcURL): Return early if plugin
        is windowed and DoNotCancelSrcStreamInWindowedMode quirk is present.

2014-10-12  Sergio Villar Senin  <svillar@igalia.com>
